--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,10 @@ language: scala
 scala:
   - 2.10.6
   - 2.11.8
+jdk:
+  - oraclejdk7
+
+matrix:
+  include:
+    - scala: 2.12.0
+      jdk: oraclejdk8
